Use hydro speeds in GRMHD HLL where magnetic field is zero

--- a/tests/InputFiles/GrMhd/GhValenciaDivClean/BinaryNeutronStar.yaml
+++ b/tests/InputFiles/GrMhd/GhValenciaDivClean/BinaryNeutronStar.yaml
@@ -153,6 +153,8 @@ SpatialDiscretization:
     ProductUpwindPenaltyAndHll:
       UpwindPenalty:
       Hll:
+        MagneticFieldMagnitudeForHydro: 1.0e-30
+        LightSpeedDensityCutoff: 1.0e-8
   DiscontinuousGalerkin:
     Formulation: StrongInertial
     Quadrature: GaussLobatto
