Move part of ObserveTimeStepVolume into ObserveConstantsPerElement
ObserveConstantsPerElement can be used as a base class for any observation
event that will observe data that has a single value per Element.

--- a/src/ParallelAlgorithms/Events/CMakeLists.txt
+++ b/src/ParallelAlgorithms/Events/CMakeLists.txt
@@ -9,6 +9,7 @@ spectre_target_sources(
   ${LIBRARY}
   PRIVATE
   ObserveAdaptiveSteppingDiagnostics.cpp
+  ObserveConstantsPerElement.cpp
   ObserveDataBox.cpp
   ObserveNorms.cpp
   ObserveTimeStepVolume.cpp
@@ -22,6 +23,7 @@ spectre_target_headers(
   Factory.hpp
   MonitorMemory.hpp
   ObserveAdaptiveSteppingDiagnostics.hpp
+  ObserveConstantsPerElement.hpp
   ObserveDataBox.hpp
   ObserveAtExtremum.hpp
   ObserveFields.hpp
