Numeric ID importer: support p-refinement

--- a/support/Pipelines/Bbh/Ringdown.yaml
+++ b/support/Pipelines/Bbh/Ringdown.yaml
@@ -18,7 +18,7 @@ InitialData:
     Subgroup: "{{ IdFileGlobSubgroup }}"
     ObservationValue: &InitialTime "{{ MatchTime }}"
     ObservationValueEpsilon: Auto
-    Interpolate: True
+    ElementsAreIdentical: False
     Variables:
       SpacetimeMetric: SpacetimeMetric
       Pi: Pi
