--- a/tests/InputFiles/GrMhd/GhValenciaDivClean/BinaryNeutronStar.yaml
+++ b/tests/InputFiles/GrMhd/GhValenciaDivClean/BinaryNeutronStar.yaml
@@ -430,7 +430,7 @@ InitialData:
     Subgroup: VolumeData
     ObservationValue: Last
     ObservationValueEpsilon: Auto
-    Interpolate: True
+    ElementsAreIdentical: False
     GhVariables:
       Lapse: Lapse
       Shift: ShiftExcess
