--- a/tests/Unit/IO/Importers/Test_VolumeDataReaderAlgorithm3D.yaml
+++ b/tests/Unit/IO/Importers/Test_VolumeDataReaderAlgorithm3D.yaml
@@ -66,7 +66,7 @@ Importers:
     Subgroup: "TestData"
     ObservationValue: 3.
     ObservationValueEpsilon: Auto
-    Interpolate: True
+    ElementsAreIdentical: False
 
 ResourceInfo:
   AvoidGlobalProc0: false
