Add tag StepNumberWithinSlab
This tag will be used to count steps within a slab.
Update the value of this tag in Actions::AdvanceTime.
This tag will enable making a Trigger that can be used for
triggering AMR within a Slab when using local time stepping.

--- a/src/Time/Tags/CMakeLists.txt
+++ b/src/Time/Tags/CMakeLists.txt
@@ -11,6 +11,7 @@ spectre_target_headers(
   IsUsingTimeSteppingErrorControl.hpp
   MinimumTimeStep.hpp
   StepChoosers.hpp
+  StepNumberWithinSlab.hpp
   StepperErrorTolerances.hpp
   StepperErrors.hpp
   Time.hpp
