Add enum Triggers::WhenToCheck
WhenToCheck will be used to distinguish input file options for
EventsAndTriggers that are checked at different frequencies (e.g.
after every time slab or after every time step).

--- a/src/ParallelAlgorithms/EventsAndTriggers/CMakeLists.txt
+++ b/src/ParallelAlgorithms/EventsAndTriggers/CMakeLists.txt
@@ -11,6 +11,7 @@ spectre_target_sources(
   Completion.cpp
   EventsAndTriggers.cpp
   LogicalTriggers.cpp
+  WhenToCheck.cpp
   )
 
 spectre_target_headers(
@@ -23,6 +24,7 @@ spectre_target_headers(
   LogicalTriggers.hpp
   Tags.hpp
   Trigger.hpp
+  WhenToCheck.hpp
   )
 
 target_link_libraries(
