Template EventsAndTriggers tags on WhenToCheck
In evolution executables, the current input option EventsAndTriggers
is replaced with EventsAndTriggersAtSlabs.
In elliptic executables, the current input option EventsAndTriggers
is replaced with EventsAndTriggersAtIterations.
In a future commit, an additional input file option will be added
for evolution executables with local time stepping.

--- a/support/Pipelines/Bbh/InitialData.yaml
+++ b/support/Pipelines/Bbh/InitialData.yaml
@@ -231,7 +231,7 @@ RadiallyCompressedCoordinates:
   OuterRadius: *outer_radius
   Compression: *outer_shell_distribution
 
-EventsAndTriggers:
+EventsAndTriggersAtIterations:
   - Trigger: HasConverged
     Events:
       - ObserveFields:
