--- a/tests/InputFiles/Burgers/Step.yaml
+++ b/tests/InputFiles/Burgers/Step.yaml
@@ -69,7 +69,7 @@ SpatialDiscretization:
   SubcellSolver:
     Reconstructor: MonotonisedCentral
 
-EventsAndTriggers:
+EventsAndTriggersAtSlabs:
   - Trigger: Always
     Events:
       - ChangeSlabSize:
