--- a/tests/InputFiles/Xcts/BinaryBlackHole.yaml
+++ b/tests/InputFiles/Xcts/BinaryBlackHole.yaml
@@ -234,7 +234,7 @@ RadiallyCompressedCoordinates:
   OuterRadius: *outer_radius
   Compression: *outer_shell_distribution
 
-EventsAndTriggers:
+EventsAndTriggersAtIterations:
   - Trigger: Always
     Events:
       - ObserveNorms:
