--- a/tests/InputFiles/Cce/AnalyticTestBouncingBlackHole.yaml
+++ b/tests/InputFiles/Cce/AnalyticTestBouncingBlackHole.yaml
@@ -36,7 +36,7 @@ Observers:
   VolumeFileName: "CharacteristicExtractUnusedVolume"
   ReductionFileName: "CharacteristicExtractReduction"
 
-EventsAndTriggers:
+EventsAndTriggersAtSlabs:
   - Trigger:
       Slabs:
         EvenlySpaced:
