--- a/tests/InputFiles/ExportCoordinates/InputTimeDependent3D.yaml
+++ b/tests/InputFiles/ExportCoordinates/InputTimeDependent3D.yaml
@@ -99,7 +99,7 @@ Evolution:
     AdamsBashforth:
       Order: 1
 
-EventsAndTriggers:
+EventsAndTriggersAtSlabs:
   - Trigger:
       TimeCompares:
         Comparison: GreaterThanOrEqualTo
