--- a/tests/InputFiles/ForceFree/FastWave.yaml
+++ b/tests/InputFiles/ForceFree/FastWave.yaml
@@ -72,7 +72,7 @@ Observers:
   VolumeFileName: "ForceFreeFastWaveVolume"
   ReductionFileName: "ForceFreeFastWaveReductions"
 
-EventsAndTriggers:
+EventsAndTriggersAtSlabs:
   - Trigger:
       Slabs:
         Specified:
