--- a/tests/InputFiles/ScalarTensor/KerrSchildSphericalHarmonic.yaml
+++ b/tests/InputFiles/ScalarTensor/KerrSchildSphericalHarmonic.yaml
@@ -126,7 +126,7 @@ SpatialDiscretization:
     Formulation: StrongInertial
     Quadrature: GaussLobatto
 
-EventsAndTriggers:
+EventsAndTriggersAtSlabs:
   - Trigger:
       TimeCompares:
         Comparison: GreaterThan
