Template evolution RunEventsAndTriggers on whether using LTS
If using LTS, then check EventsAndTriggersAtSteps which can trigger
at steps inside a Slab.

--- a/support/Pipelines/Bbh/Ringdown.yaml
+++ b/support/Pipelines/Bbh/Ringdown.yaml
@@ -266,6 +266,8 @@ EventsAndTriggersAtSlabs:
     Events:
       - Completion
 
+EventsAndTriggersAtSteps:
+
 EventsAndDenseTriggers:
   # BondiSachs output needs to be often enough for CCE to run properly. An
   # interval of 0.1 was found to work well in SpEC.
