--- a/tests/InputFiles/CurvedScalarWave/PlaneWaveMinkowski3D.yaml
+++ b/tests/InputFiles/CurvedScalarWave/PlaneWaveMinkowski3D.yaml
@@ -134,6 +134,8 @@ EventsAndTriggersAtSlabs:
               NormType: L2Norm
               Components: Individual
 
+EventsAndTriggersAtSteps:
+
 EventsAndDenseTriggers:
 
 InterpolationTargets:
