--- a/support/Pipelines/Bbh/Inspiral.yaml
+++ b/support/Pipelines/Bbh/Inspiral.yaml
@@ -372,6 +372,8 @@ EventsAndTriggersAtSlabs:
     Events:
       - Completion
 
+EventsAndTriggersAtSteps:
+
 EventsAndDenseTriggers:
   # BondiSachs output needs to be often enough for CCE to run properly. An
   # interval of 0.1 was found to work well in SpEC.
