--- a/tests/Unit/Time/Triggers/CMakeLists.txt
+++ b/tests/Unit/Time/Triggers/CMakeLists.txt
@@ -6,6 +6,7 @@ set(LIBRARY_SOURCES
   Triggers/Test_NearTimes.cpp
   Triggers/Test_SlabCompares.cpp
   Triggers/Test_Slabs.cpp
+  Triggers/Test_StepsWithinSlab.cpp
   Triggers/Test_TimeCompares.cpp
   Triggers/Test_Times.cpp
   PARENT_SCOPE)
