--- a/tests/InputFiles/ExportCoordinates/Input1D.yaml
+++ b/tests/InputFiles/ExportCoordinates/Input1D.yaml
@@ -27,6 +27,7 @@ Amr:
     Limits:
       RefinementLevel: [0, 4]
       NumGridPoints: Auto
+      ErrorBeyondLimits: False
   Verbosity: Verbose
 
 ResourceInfo:
