--- a/src/DataStructures/Blaze/CMakeLists.txt
+++ b/src/DataStructures/Blaze/CMakeLists.txt
@@ -5,6 +5,7 @@ spectre_target_headers(
   ${LIBRARY}
   INCLUDE_DIRECTORY ${CMAKE_SOURCE_DIR}/src
   HEADERS
+  Blaze.hpp
   IntegerPow.hpp
   StepFunction.hpp
   )
