--- a/src/Evolution/Systems/Cce/Events/CMakeLists.txt
+++ b/src/Evolution/Systems/Cce/Events/CMakeLists.txt
@@ -5,6 +5,7 @@ spectre_target_headers(
   ${LIBRARY}
   INCLUDE_DIRECTORY ${CMAKE_SOURCE_DIR}/src
   HEADERS
+  Events.hpp
   ObserveFields.hpp
   ObserveTimeStep.hpp
   )
