Add event ObserveAmrCriteria
ObserveAmrCriteria can be used to monitor the decisions made by each
AMR criteria even when not adapting the grid.

--- a/src/ParallelAlgorithms/Amr/Events/CMakeLists.txt
+++ b/src/ParallelAlgorithms/Amr/Events/CMakeLists.txt
@@ -16,6 +16,7 @@ spectre_target_headers(
   INCLUDE_DIRECTORY ${CMAKE_SOURCE_DIR}/src
   HEADERS
   Events.hpp
+  ObserveAmrCriteria.hpp
   RefineMesh.hpp
   )
 
