--- a/tests/Unit/ParallelAlgorithms/Amr/CMakeLists.txt
+++ b/tests/Unit/ParallelAlgorithms/Amr/CMakeLists.txt
@@ -22,6 +22,7 @@ set(LIBRARY_SOURCES
   Criteria/Test_Persson.cpp
   Criteria/Test_Random.cpp
   Criteria/Test_TruncationError.cpp
+  Events/Test_ObserveAmrCriteria.cpp
   Events/Test_RefineMesh.cpp
   Policies/Test_EnforcePolicies.cpp
   Policies/Test_Isotropy.cpp
