--- a/tests/InputFiles/RadiationTransport/M1Grey/ConstantM1.yaml
+++ b/tests/InputFiles/RadiationTransport/M1Grey/ConstantM1.yaml
@@ -1,7 +1,7 @@
 # Distributed under the MIT License.
 # See LICENSE.txt for details.
 
-Executable: EvolveM1GreyConstantM1
+Executable: EvolveM1Grey
 Testing:
   Timeout: 5
   Check: parse;execute
@@ -29,6 +29,11 @@ Evolution:
 
 PhaseChangeAndTriggers:
 
+InitialData: &InitialData
+  ConstantM1:
+    MeanVelocity: [0.1, 0.2, 0.15]
+    ComovingEnergyDensity: 1.0
+
 DomainCreator:
   Brick:
     LowerBound: [10.5, 0.0, 0.0]
@@ -38,14 +43,12 @@ DomainCreator:
     InitialGridPoints: [5, 5, 5]
     TimeDependence: None
     BoundaryConditions:
-      - DirichletAnalytic
-      - DirichletAnalytic
-      - DirichletAnalytic
-
-AnalyticSolution:
-  ConstantM1:
-    MeanVelocity: [0.1, 0.2, 0.15]
-    ComovingEnergyDensity: 1.0
+      - DirichletAnalytic:
+          AnalyticPrescription: *InitialData
+      - DirichletAnalytic:
+          AnalyticPrescription: *InitialData
+      - DirichletAnalytic:
+          AnalyticPrescription: *InitialData
 
 SpatialDiscretization:
   BoundaryCorrection:
