--- a/support/Machines/Ocean.yaml
+++ b/support/Machines/Ocean.yaml
@@ -6,7 +6,7 @@ Machine:
   Description: |
     Supercomputer at Cal State Fullerton hosted by Geoffrey Lovelace.
   DefaultTasksPerNode: 1
-  DefaultProcsPerTasks: 20
+  DefaultProcsPerTask: 20
   DefaultQueue: "orca-1"
   DefaultTimeLimit: "1-00:00:00"
   LaunchCommandSingleNode: []
