Make doxygen layout file version dependent
Doxygen layout files are dependent upon doxygen version.  There
was a breaking change in 1.9.8 to support c++ modules.  Doxygen
groups had been labeled as modules, but are now labeled as topics.
- Renamed layout.xml to DoxygenLayout_1_8_10.xml
- Added DoxygenLayout_1_9_8.xml
- Add switch between the two based on the version of doxygen

--- a/docs/Doxyfile.in
+++ b/docs/Doxyfile.in
@@ -243,7 +243,7 @@ GENERATE_LEGEND        = NO
 # HTML layout file
 #---------------------------------------------------------------------------
 
-LAYOUT_FILE = @PROJECT_SOURCE_DIR@/docs/config/layout.xml
+LAYOUT_FILE = @DOXYGEN_LAYOUT_FILE@
 
 HTML_EXTRA_FILES       = @PROJECT_SOURCE_DIR@/docs/config/icons/octicons.eot \
                          @PROJECT_SOURCE_DIR@/docs/config/icons/octicons.svg \
